# Simple-download-manager

./: .gitignore  README.md  pyproject.toml
docs/: demo_script.md  technical_report.docx
scripts/: performance_compare.py
src/sdm/: __init__.py  app.py  downloader.py  models.py  storage.py  utils.py
src/sdm/ui/: __init__.py  main_window.py
tests/: test_downloader.py
