[project]
name = "simple-download-manager"
version = "0.1.0"
description = "A polished Python desktop download manager with segmented HTTP downloads."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sdm = "sdm.app:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
